--- a/views/index.html
+++ b/views/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <h1>Sube un archivo</h1>
-    <form action="/files" method="post" enctype="multipart/form-data">
+    <form action="/files" method="post" enctype="multipart/form-data"> <!--de multipart proviene el multer-->
         <input type="file" name="avatar" id="">
         <input type="submit" value="enviar">
     </form>
 </body>
 </html>
+
+
+<!--el action del form envia una peticion a "/files" para que se guarde el archivo-->
